src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>pymt__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PaymentConnect Category this product is associated with.</description>
        <inlineHelpText>PaymentConnect Category this product is associated with.</inlineHelpText>
        <label>Category</label>
        <referenceTo>pymt__Category__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pymt__Image_Id__c</fullName>
        <description>Attach an image file to this record using the image upload widget to populate this field with an attachment Id. If a value has been set for the Image URL field, this value will be ignored.</description>
        <inlineHelpText>Attach an image file to this record using the image upload widget to populate this field with an attachment Id. If a value has been set for the Image URL field, this value will be ignored.</inlineHelpText>
        <label>Image Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Image_URL__c</fullName>
        <description>Add or edit an image attachment to this record to make an image available for display on the website, or override any image attachments by entering the URL of an image on another server here. Clear this field to use image attachments.</description>
        <inlineHelpText>Add or edit an image attachment to this record to make an image available for display on the website, or override any image attachments by entering the URL of an image on another server here. Clear this field to use image attachments.</inlineHelpText>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pymt__Image__c</fullName>
        <formula>IMAGE(BLANKVALUE(pymt__Image_URL__c,IF(ISBLANK(pymt__Image_Id__c),&apos;/s.gif&apos;,&apos;/servlet/servlet.FileDownload?file=&apos;+pymt__Image_Id__c)), &apos;Image&apos; ,60 ,60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Inventory__c</fullName>
        <description>Number of items in stock</description>
        <inlineHelpText>Number of items in stock</inlineHelpText>
        <label>Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pymt__On_Payment_Completed__c</fullName>
        <inlineHelpText>PaymentConnect Action to perform after this product has been paid for.</inlineHelpText>
        <label>On Payment Completed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Tangible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the product is a physical product (ie requires shipping).</description>
        <inlineHelpText>Check if the product is a physical product (ie requires shipping).</inlineHelpText>
        <label>Tangible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the item is taxable.</description>
        <inlineHelpText>Check if the item is taxable.</inlineHelpText>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Weight_Class__c</fullName>
        <label>Weight Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grams</fullName>
                </value>
                <value>
                    <fullName>Kilograms</fullName>
                </value>
                <value>
                    <fullName>Pounds</fullName>
                </value>
                <value>
                    <fullName>Ounces</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>